--- a/Mikhailov-en.tex
+++ b/Mikhailov-en.tex
@@ -1,3 +1,30 @@
+% % Terminology collection
+% irreducible - несводимый
+% single entry single exit (SESE) regions of the control flow graph
+% dominators
+% control regions
+% dominates n and b postdominates
+% depth-first traversal
+% we can simply visit nodes in reverse depth-first order and maintain a stack of brackets
+% connecting the node to an ancestor
+% lower endpoint
+% brackets originating in the same subtree
+
+% The new bracket originates from the node whose children are being merged, and extends up to the highest node whose brackets come from more than one of the branches. To add this new backedge requires keeping track (at each node in the tree) of the highest node reached by any backedge below this point. The destination of the new backedge from a node is the second"=highest of the node’s children’s highest backedges. This could be found by examination of the bracket sets, but the highest"=ending backedge is not necessarily related to the first bracket in each set (the highest"=originating), so a full search of the bracket set would be necessary.
+
+% control dependent
+% Nodes or edges
+% reducible graphs
+% dominance frontiers
+% quick propagation graph
+% use of the PST allows structure and sparsity to be exploited simultaneously
+% unique entry and exit edges
+% multiple edges to the entry node from outside the region, as well as out of the exit node
+% bracket
+% undirected graph
+
+
+
 
 %% bare_conf.tex
 %% V1.4b
@@ -307,7 +334,7 @@
 
 % *** PDF, URL AND HYPERLINK PACKAGES ***
 %
-%\usepackage{url}
+\usepackage{url}
 % url.sty was written by Donald Arseneau. It provides better support for
 % handling and breaking URLs. url.sty is already installed on most LaTeX
 % systems. The latest version and documentation can be obtained at:
@@ -349,7 +376,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Control Flow Graph Visualization for Reverse Engineering of Compiled Software}
+\title{Control Flow Graph Visualization in Compiled Software Engineering}
 
 
 % author names and affiliations
@@ -439,12 +466,12 @@ The paper describes a technique \nnn{and software tools} for analyzing and visua
 
 The main quality criterion of a control graph visualization is the correspondence of the constructed image to the nature of the visualized informational object.  The quality assessment depends on various structural and \nnn{semantic} characteristics of the object.  Three basis features are emphasized specially among the criteria: \nnn{visual arrangement, aesthetics, restrictions}.
 \begin{itemize}
-\item \emph{Visual arrangement} \nnn{WE NEED CONSTRUCTIVE DEFINITION!! NOT A CONSTRAINTS!!}
-\item \emph{aesthetics}
-\item \emph{restrictions}
+\item \emph{Visual arrangement} is the main set of rules that a graph representation must obey to be acceptable as a desired result.  For example, to visualize programs as a flowchart, \nnn{a} layout engine must obey an \nnn{agreement} that all the nodes must be represented as rectangles and the edges are polylines consisting only with vertical and horizontal sections.  In a general case, an visual arrangement can be sufficiently complex and include a lot of details related to the target image.
+\item \emph{Aesthetics} is a subset of the criteria that defines attributes of the constructed image, which must be followed as much as possible to improve visibility.  A wide used aesthetic criteria are the following: minimizing a number of edge intersections, minimizing a number of foldings, minimizing the area of placement, maximizing the resolution, minimizing the total edge length, unification of edge lengths, minimizing the number of folds on an edge, foldings unification, maximizing a symmetry of graph representation, minimizing \nnn{the coefficient of sides}. % минимизация коэффициента сторон.
+\item \emph{Restrictions} are a subset of the criteria that define layout rules for peculiar elements and subgraphs of the constructed image.  The most common used criteria are \emph{the center} that define whether the root node must be placed at the center of the image, \emph{externality} that define the necessity to place a node outside a region, \emph{cluster} defines that a number of nodes should be placed together near to each other, \emph{sequence} defines the order of nodes placement during drawing paths (left to right, top-bottom).
 \end{itemize}
 
-A control flow graph that was reconstructed from a binaries consists of the only starting node, operator block nodes, and an non-empty set of finish nodes, as well as edges corresponding to transfers of control.  A natural representation of the control flow graph is a flowchart diagram.  For the flow charts we define the following visual layout for its nodes (Fig.~\ref{fig:blocks}).
+A control flow graph that was reconstructed from a binaries consists of operator block nodes, starting node, and an non-empty set of finish nodes, as well as edges corresponding to transfer of control.  A natural image of the control flow graph is a flowchart diagram.  For the flow charts we define the following \nnn{visual arrangement} for its nodes (Fig.~\ref{fig:blocks}).
 
 \section{Control flow graph visualizing}
 \label{sec:cfg-vis}
@@ -641,6 +668,14 @@ Subsubsection text here.
 % footnotes above bottom floats. This can be corrected via the
 % \fnbelowfloat command of the stfloats package.
 
+
+\section{A layout example}
+
+Let's consider a result of our algorithm in comparison to one of a hierarchic layout engine (Fig.~\ref{fig:image1}).  In the figure, our algorithm (\emph{a}) specially emphasizes the backward edge that corresponds to a loop.  The edge style is visually distinguishable from other edges.  The algorithm also marks the terminal nodes.  Such visualization features allow to recognize visually the regions of interest and other kinds of analysis.  In Fig.~\ref{fig:image1}\emph{а}, the edges are represented with straight plain lines (except edge connecting \texttt{v9} and \texttt{v5}).  This will ease of control transferring analysis as compared to the form in Fig.~\ref{fig:image1}\emph{б}. Note, that the proposed algorithm accounts not all the variants of control flow patterns and can be improved for example to support undetermined edges removal in a region.
+
+%  а) иерархический, б) структурный
+% fig
+
 \section{Further development (CAN BE MERGED WITH Conclusion if small)}
 \label{sec:further-development}
 
@@ -702,11 +737,45 @@ The authors would like to thank...}
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
+\begin{thebibliography}{9}
 
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
+\bibitem{10} M.~Frohlich, M.~Werner, \emph{Demonstration of the Interactive Graph Visualization System daVinci}, LNCS~894, 1995,~P.~266--269.
+
+\bibitem{14} G.~Sander, \emph{Graph loyout through the VCG tool}, LNCS~894, 1995, P.~194--205.
+
+\bibitem{12} M.~Himsolt, \emph{Graphlet System (System Demonstration)}, LNCS~1990, 1996. P.~233--240.
+
+\bibitem{13} H.~Lauer, M.~Ettrich, K.~Soukup, \emph{GraVis System Demonstration}, LNCS~1353, 1997, P.~344--349.
+
+\bibitem{9} S.~Bridgeman, A.~Garg, R.~Tamassia, \emph{A Graph Drawing and Translation Service on the WWW}, LNCS~1190, 1996, P.~45--52.
+
+\bibitem{11} E.~R.~Gasner, S.~C.~North, \emph{An Open Graph Visualization System and its Applications to Software Engineering}, \url{http://www.graphviz.org/Documentation/GN99.pdf}
+
+\bibitem{15} T.~A.~Zolotukhin, \emph{Graph Visualization with Programming System ``Visual Graph''}, Computer Science in Science and Education, 2012, P.~135--148. (in~Russian)
+
+\bibitem{18} A.~A.~Mikhailov, \emph{Control Flow Graph Analysis in Decompilation of Object Files dcuil}, Vestnik of Novosibirsk State University, Computer Science Technologies Series, 2014, Vol.~12, Issue~2, P.~74--79. (in~Russian)
+
+\bibitem{1} V.~N.~Kasyanov, \emph{Visualizing Information on the Base of Graph Models}, Computational Technologies, 1999. Vol.~11, No.~11, P.~1123--1135. (in~Russian)
+
+\bibitem{7} W.~T.~Tutte, \emph{How to Draw a Graph}, Proc. of London Math. Society. 1963. 13(52),  P.~743--768.
+
+\bibitem{5} P.~A.~Eades, \emph{A Heuristic for Graph Drawing}, Congressus Numerantium, 1984, 42,  P.~149--160.
+
+\bibitem{6} T.~Kamada, S.~Kawai, \emph{An Algorithm for Drawing General Undirected Graphs}, Inform. Process. Lett, 1989, 31, P.~7--15.
+
+\bibitem{4} P.~Eades, L.~Xuemin, \emph{How to Draw a Directed Graph}, Visual Languages, 1989, IEEE Workshop on, IEEE, 1989, P.~13--17.
+
+\bibitem{8} P.~Eades, N.~C.~Wormald, \emph{The Median Heuristic for Drawing 2--Layered Networks}, Technical Report 69, Dept. of Computer Science, University of Queensland, 1986.
+
+\bibitem{16} A.~V.~Aho, R.~Sethi, J.~D.~Ullman, \emph{Compilers: Principles, Techniques, And Tools}, Addison Wesley, 1986.  MLA
+
+\bibitem{17} C.~Cifuentes, \emph{Structuring Decompiled Graphs. Compiler Construction}, Springer Berlin Heidelberg, 1996, P.~91--105.
+
+\bibitem{3} R.~Johnson,D.~Pearson, and K.~Pingali, \emph{Finding regions fast: Single entry single exit and control regions in linear time}. Tech. rep., Cornell University, Ithaca, NY, 1993
+
+%\bibitem{IEEEhowto:kopka}
+%H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
+%  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
 
 \end{thebibliography}
 
@@ -715,32 +784,6 @@ H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
 
 % that's all folks
 \end{document}
-
-% Terminology collection
-irreducible - несводимый
-single entry single exit (SESE) regions of the control flow graph
-dominators
-control regions
-dominates n and b postdominates
-depth-first traversal
-we can simply visit nodes in reverse depth-first order and maintain a stack of brackets
-connecting the node to an ancestor
-lower endpoint
-brackets originating in the same subtree
-
-The new bracket originates from the node whose children are being merged, and extends up to the highest node whose brackets come from more than one of the branches. To add this new backedge requires keeping track (at each node in the tree) of the highest node reached by any backedge below this point. The destination of the new backedge from a node is the second"=highest of the node’s children’s highest backedges. This could be found by examination of the bracket sets, but the highest"=ending backedge is not necessarily related to the first bracket in each set (the highest"=originating), so a full search of the bracket set would be necessary.
-
-control dependent
-Nodes or edges
-reducible graphs
-dominance frontiers
-quick propagation graph
-use of the PST allows structure and sparsity to be exploited simultaneously
-unique entry and exit edges
-multiple edges to the entry node from outside the region, as well as out of the exit node
-bracket
-undirected graph
-
 
 %%% Local Variables:
 %%% mode: latex
